modified glp styles task

--- a/app/index.html
+++ b/app/index.html
@@ -7,14 +7,14 @@
   <title>Bootstrap 4 Starter Pack</title>
   <!-- <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">-->
-  <link rel="stylesheet" href="./temp/css/bundle.css"> 
+  <link rel="stylesheet" href="temp/css/bundle.css"> 
 </head>
 <body>
   <!-- Remove this div before you start a new project -->
   <div class="container">
     <row>
-      <div class="col-8-sm m-auto">
-          <h1 class="mt-5">Bootstrap 4 Basic Starter Pack</h1><small>Version 4.0.0</small>
+      <div class="col-sm-8 m-auto">
+          <h1 class="mt-5 text-center">Bootstrap 4 Basic Starter Pack</h1><small>Version 4.0.0</small>
           <p>This Basic Starter Pack does not include:</p>
           <ul>
             <li>Minification task for CSS Files</li>
@@ -23,6 +23,7 @@
             <li>Any Templating System</li>
           </ul>
           <p>Must improve on this pkg later</p>
+          <button class="btn btn-success btn-lg justify-center"><i class="fa fa-address-card" aria-hidden="true"></i>&nbsp;&nbsp;BS4</button>
       </div>
     </row>
   </div>
