browserSync set and implementation completed

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <row>
       <div class="col-sm-8 m-auto">
-          <h1 class="mt-5 text-center">Bootstrap 4 Basic Starter Pack</h1><small>Version 4.0.0</small>
+          <h1 class="mt-5 text-center">Bootstrap 4 Starter Pack</h1><small>Version 4.0.0</small>
           <p>This Basic Starter Pack does not include:</p>
           <ul>
             <li>Minification task for CSS Files</li>
