--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <row>
       <div class="col-sm-8 m-auto">
           <h1 class="mt-5 text-center">Bootstrap 4 Starter Pack</h1><small>Version 4.0.0</small>
-          <p>This Basic Starter Pack does not include:</p>
+          <p>This Basic Starter Pack does not include the following:</p>
           <ul>
             <li>Minification task for CSS Files</li>
             <li>Minification task for JS Files</li>
