--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
             <li>Any Templating System</li>
           </ul>
           <p>Must improve on this pkg later</p>
+          <p>If your eyes are "round", apply a strip of paint from the inner corner of the eye to the outer (in this direction the line should expand), lash the eyelashes with black ink. Shadows at the inner corner of the eye narrowly, expanding them to the outer corner. Tint preparations for the eyelids choose gentle, pastel colors.</p>
           <button class="btn btn-success btn-lg justify-center"><i class="fa fa-address-card" aria-hidden="true"></i>&nbsp;&nbsp;BS4</button>
       </div>
     </row>
@@ -33,7 +34,7 @@
 
   <!-- <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script> -->
+  <script src="js/bootstrap.min.js"></script> -->
+  <script src="temp/scripts/App.js"></script>
 </body>
 </html>
